# ukui-themes

./: Makefile  README.md  meson.build  ukui-custom.xml
.github/workflows/: build.yml
blue-crystal/: Makefile  cursor.theme  cursors.sh  index.theme
blue-crystal/cursors/: X_cursor  bd_double_arrow  circle  (+48 more)
dark-sense/: Makefile  cursor.theme  cursors.sh  index.theme
debian/: .changelog.swp  25_ukui-themes.gschema.override  changelog  chinese  control  copyright  rules  ukui-theme.install  ukui-theme.postinst  ukui-theme.postrm  ukui-theme.prerm  ukui-themes.install  ukui-themes.postinst  ukui-themes.postrm  ukui-themes.prerm  watch
themes/: meson.build
themes/ukui/: Makefile  index.theme.in
themes/ukui-black/: Makefile  index.theme.in
themes/ukui-dark/: Makefile  index.theme.in
themes/ukui-dark/gtk-2.0/: gtkrc
themes/ukui-dark/gtk-3.0/: _common.scss  _ukui-colors.scss  _ukui-common.scss  gtk.css  gtk.css.map
themes/ukui-light/: Makefile  index.theme.in
themes/ukui-light/gtk-2.0/: gtkrc
themes/ukui-light/gtk-3.0/: _colors-public.scss  _common.scss  _ukui-colors.scss  _ukui-common.scss  _ukui-drawing.scss  gtk.css  gtk.css.map
themes/ukui-white/: Makefile  index.theme.in
ukui-black/: Makefile  index.theme.in
ukui-blue/: Makefile  index.theme.in
ukui-grub-theme/: 06_ukui_theme  ukui_grub_bg.tga
ukui-icon-theme/: index.theme
ukui-icon-theme-basic/: index.theme
ukui-icon-theme-classical/: index.theme
ukui-icon-theme-default/: .icon-theme.cache  index.theme
ukui-theme/: index.theme
ukui-theme-black/: index.theme
ukui-theme-green/: index.theme
ukui-theme-jun/: index.theme
ukui-theme-orange/: index.theme
ukui-theme-purple/: index.theme
ukui-theme-red/: index.theme
ukui-theme-yellow/: index.theme
ukui-white/: Makefile  index.theme  index.theme.in
(+174 files in other folders)
