install_data(
  'ukui/index.theme.in',
  rename : 'index.theme',
  install_dir : '/usr/share/themes/ukui',
)
install_data(
  'ukui-black/index.theme.in',
  rename : 'index.theme',
  install_dir : '/usr/share/themes/ukui-black',
)

install_data(
  'ukui-white/index.theme.in',
  rename : 'index.theme',
  install_dir : '/usr/share/themes/ukui-white',
)
install_data(
  'ukui-dark/index.theme.in',
  rename : 'index.theme',
  install_dir : '/usr/share/themes/ukui-dark',
)
install_data(
  'ukui-light/index.theme.in',
  rename : 'index.theme',
  install_dir : '/usr/share/themes/ukui-light',
)

